Changed both the index and CSS file to align the logo and various links, making sure to include the flex display in all affected classes, and ensured there are at least 8px between each element

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -9,10 +9,20 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+} 
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +55,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
 }
